--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "serve": "nodemon index.js"
   },
   "dependencies": {
+    "alert": "^5.0.10",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
