--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,14 @@
     "serve": "nodemon index.js"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "alert": "^5.0.10",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
+    "joi": "^17.6.0",
     "multer": "^1.4.4",
     "mysql2": "^2.2.5"
   },
