--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "joi": "^17.6.0",
+    "joi-sql": "^1.4.1",
     "multer": "^1.4.4",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "nodemailer": "^6.7.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
